# Open-Scribe-AI

./: .env.example  HUMAN_ACTIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/api/api/routes/: fhir.py  health.py  ingest.py  note.py
apps/api/core/: config.py  logging.py
apps/api/middleware/: hipaa_guard.py
apps/api/models/: schemas.py
apps/api/services/: audio_proc.py  deid.py  fhir_mapper.py  llm_orchestrator.py  nlp_engine.py  whisper_local.py
apps/api/tests/: test_audit_logs.py  test_buffer_purge.py  test_deid.py  test_fhir_bundle.py  test_ingest_headers.py  test_llm_guard.py
docs/: 00_MASTER_BUILD_INSTRUCTIONS.md  01_REPO_SCAFFOLD.md  02_API_SPEC.md  03_Security_Privacy  04_Local_Deployment  05_Test_plan.md  06_Documentation_NIW.md  07_Backlog_Roadmap.md  Human_Actions.md  IMPLEMENTATION_REPORT.md  benchmarks.md  data-flow.md  database-architecture.md  hhs-alignment.md  niw-evidence.md  threat-model.md  whitepaper.md
docs/postman/: Open-Scribe-AI.postman_collection.json
infra/docker/: Dockerfile.api  docker-compose.yml
infra/docker/ollama/: README.md
sql/: 001_init_schema.sql  002_indexes.sql  003_retention_cleanup.sql  004_readiness_checks.sql
