[project]
name = "open-scribe-ai"
version = "0.1.0"
description = "Local-first clinical scribe MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "fhir.resources>=8.0.0",
  "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/api/tests"]

